# victron-alfen-charger

./: .cursorrules  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .stylelintrc.json  CLAUDE.md  Makefile  README.md  REFACTORING_SUMMARY.md  alfen_driver_config.json  alfen_driver_config.sample.yaml  alfen_driver_config.yaml  alfen_driver_config_with_logging.sample.yaml  bandit-report.json  driver.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_modbus.py
.github/workflows/: ci.yml
alfen_driver/: __init__.py  config.py  config_schema.py  config_validator.py  constants.py  controls.py  dbus_utils.py  di_container.py  di_setup.py  driver.py  error_recovery.py  exceptions.py  implementations.py  injectable_driver.py  interfaces.py  logging_utils.py  logic.py  mocks.py  modbus_utils.py  persistence.py  session_manager.py  tibber.py  web.py
alfen_driver/webui/: app.js  index.html  styles.css
docs/: configuration_guide.md  docstring_standards.md
examples/: error_handling_usage.py  structured_logging_demo.py
reference/: Implementation_of_Modbus_Slave_TCPIP_for_Alfen_NG9xx_platform.md  ev_charger.py
tests/: README.md  __init__.py  conftest.py  test_config.py  test_config_schema.py  test_config_validator.py  test_controls.py  test_dbus_utils.py  test_error_recovery.py  test_exceptions.py  test_injectable_driver.py  test_integration.py  test_logging_utils.py  test_logic.py  test_modbus_utils.py  test_persistence.py  test_session_manager.py  test_tibber.py  test_web.py
